# fft-trans

./: CMakeLists.txt  INSTALL  Makefile  README  cobalt1024.sh  cobalt128k.sh  cobalt16k.sh  cobalt2048.sh  cobalt32k.sh  cobalt4096.sh  cobalt64k.sh  cobalt8192.sh  data.cc  fft.cc  fft.ci  fft1d.C  fft1d.cc  fft1d.ci  fft1d.cu  fft1d.h  fft1d.smp.C  fft1d.smp.ci  fft1d_mpi_wrapper.cc  fft1d_mpi_wrapper.ci  fft_bench.cpp  fft_charm_mpi.cc  fft_ref.cpp  fileio.h  main.cc  main.ci  runbench.sh  runscript.sh  scriptlauncher.sh  test.sh  verify.cc  verify.h
2011runs/: 260067.output  260070.output  260074.output  260082.output  260083.output  260084.output  260558.output  260559.output  260570.output  260581.output  260585.output  260590.output  260597.output  260599.output  260600.output  260603.output  260607.output  260609.output  260611.output  260632.output  260635.output  260637.output  260644.output  260653.output  260666.output  260700.output  260896.output  260898.output  260899.output  260902.output  260909.output  260910.output  260911.output  260912.output  260913.output  260921.output  260923.output  260926.output  261563.cobaltlog  261564.cobaltlog  (+479 more)
2012runs/: 563879.cobaltlog  563879.error  563879.output  563935.cobaltlog  563935.error  563939.cobaltlog  563939.error  563939.output  563947.cobaltlog  563947.error  563949.cobaltlog  563949.error  563949.output  563951.cobaltlog  563951.error  563951.output  563959.cobaltlog  563959.error  563959.output  563972.cobaltlog  563972.error  563972.output  563973.cobaltlog  563981.cobaltlog  563981.error  563981.output  563985.cobaltlog  563985.error  563985.output  563990.cobaltlog  563990.error  563990.output  563996.cobaltlog  563996.error  563996.output  564016.cobaltlog  564016.error  564016.output  564023.cobaltlog  564023.error  (+181 more)
cmake/: Charm++Macros.cmake  FindCharm++.cmake
gad/: fft1d.gad
include/: fft.h  fft_to_main.h  fft_to_transpose.h  main_to_fft.h  transpose.h  transpose_to_fft.h  transpose_to_transpose.h  validation.h
mpi/: Makefile  fft1d_mpi_wrapper.cc  fft1d_mpi_wrapper.ci  fft1d_mpi_wrapper.h  fft_charm_mpi.cc
runs/: 21111.cobaltlog  21111.error  21111.output  21125.cobaltlog  21125.error  21125.output  21127.cobaltlog  21127.error  21127.output  21128.cobaltlog  21128.error  21128.output  21134.cobaltlog  21134.error  21134.output  21153.cobaltlog  21153.error  21153.output  21155.cobaltlog  21155.error  21156.cobaltlog  21156.error  21156.output  21157.cobaltlog  21157.error  21157.output  21158.cobaltlog  21158.error  21158.output  21160.cobaltlog  21160.error  21160.output  21165.cobaltlog  21165.error  21165.output  21167.cobaltlog  21167.error  21167.output  21170.cobaltlog  21170.error  (+285 more)
scripts/summit/: nsys-multi.sh  nsys-single.sh  nsys.sh
src/Fft/: Fft.ci  fft.cpp
src/FftComputer/: FftComputer.ci  fftcomputer.cpp
src/FftValidator/: FftValidator.ci  fftvalidator.cpp
src/Validation/: Validation.ci  validation.cpp
src/ValidatorMain/: ValidatorMain.ci  validatormain.cpp
src/fft/: fft.ci  fft.cpp
src/fft_to_main/: fft_to_main.ci  fft_to_main.cpp
src/main/: main.ci  main.cpp
src/main_to_fft/: main_to_fft.ci  main_to_fft.cpp
src/mesh_transpose/: mesh_transpose.ci  mesh_transpose.cpp
src/p2p_transpose/: p2p_transpose.ci  p2p_transpose.cpp
src/transpose/: transpose.ci  transpose.cpp
src/transpose_to_transpose/: transpose_to_transpose.ci  transpose_to_transpose.cpp
